# url-shortener

./: .gitignore  Cargo.toml  README.md  build_and_replace_frontend.ps1  urls.db
public/www/: index.html
public/www/assets/: index-CM4_b6dm.js  index-DXAo5j0M.css  index-Dxfcfper.js  index-XJ2T6Qew.css
public/www/old/: index.html
scripts/: build_and_replace_frontend.ps1  deploy.ps1
shorten-link-frontend/: index.html  package.json  pnpm-lock.yaml
shorten-link-frontend/src/: App.tsx  main.tsx
shorten-link-frontend/src/Auth/: AuthProvider.tsx
shorten-link-frontend/src/components/: LinkCard.tsx  ShortenForm.tsx  UserLinksList.tsx
shorten-link-frontend/src/components/login/: LoginForm.tsx  LogoutButton.tsx
shorten-link-frontend/src/utils/: api.ts
src/: cors.rs  db.rs  main.rs  model.rs
src/responses/: err_response.rs  mod.rs  ok_response.rs
src/routes/: auth_routes.rs  mod.rs  url_shortener_routes.rs  user_routes.rs
