[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
md5 = "0"
dotenv = "0"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"
jsonwebtoken = "9.2.0"
rand="0"

tokio={version="1.44.1", features=["full"]}
tower="0.5.2"
tower-http={ version = "0.6.2", features = ["full"] }
axum ="0.8.1"
tower-cookies="0.11.0"